# np-github-actions

./: Makefile  README.md  pyproject.toml
.github/workflows/: black.yml  pypi.yml  pytest.yml
src/np_gh_actions/: __main__.py
tests/: __init__.py  test_main.py
